tests/diag/dym_var.hi
fn main():
    count := 1
    print(str(coutn))
